--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,15 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Idea
+.idea/*
+
+# History
+.history/*
+
+# VSCode
+.vsocde/*
+
+# Gitignore
+.gitignore
